force-app/main/default/objects/DM_Field__c/fields/DM_Adjacent_Use__c.field-meta.xml
<CustomField>
    <fullName>DM_Adjacent_Use__c</fullName>
    <label>Adjacent Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conventional Crops</fullName>
            </value>
            <value>
                <fullName>Road</fullName>
            </value>
            <value>
                <fullName>Fence line</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Irrigation Ditch</fullName>
            </value>
            <value>
                <fullName>Livestock</fullName>
            </value>
            <value>
                <fullName>Fallow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>