force-app/main/default/objects/DM_Field__c/fields/DM_Buffer_Width__c.field-meta.xml
<CustomField>
    <fullName>DM_Buffer_Width__c</fullName>
    <label>Buffer Width (ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>