force-app/main/default/objects/DM_Field__c/fields/DM_Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Certification_Date__c</fullName>
    <label>Certification Date</label>
    <type>Date</type>
</CustomField>