force-app/main/default/objects/DM_Field__c/fields/DM_Certifying_Agency__c.field-meta.xml
<CustomField>
    <fullName>DM_Certifying_Agency__c</fullName>
    <label>Certifying Agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DM_Certifiers</valueSetName>
    </valueSet>
</CustomField>