force-app/main/default/objects/DM_Field__c/fields/DM_Field_Number__c.field-meta.xml
<CustomField>
    <fullName>DM_Field_Number__c</fullName>
    <displayFormat>FIELD-{0000}</displayFormat>
    <label>Field Number</label>
    <type>AutoNumber</type>
</CustomField>