force-app/main/default/objects/DM_Field__c/fields/DM_Is_Record_Inserted__c.field-meta.xml
<CustomField>
    <fullName>DM_Is_Record_Inserted__c</fullName>
    <formula>NOT(ISBLANK(Id))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Record Inserted</label>
    <type>Checkbox</type>
</CustomField>