force-app/main/default/objects/DM_Field__c/fields/DM_Land_Use__c.field-meta.xml
<CustomField>
    <fullName>DM_Land_Use__c</fullName>
    <label>Land Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certified Organic</fullName>
                <default>true</default>
                <label>Certified Organic</label>
            </value>
            <value>
                <fullName>Transitional</fullName>
            </value>
            <value>
                <fullName>Conventional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>