force-app/main/default/objects/DM_Field__c/fields/DM_Last_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Last_Inspection_Date__c</fullName>
    <label>Last Inspection Date</label>
    <type>Date</type>
</CustomField>