force-app/main/default/objects/DM_Field__c/fields/DM_Parcel__c.field-meta.xml
<CustomField>
    <fullName>DM_Parcel__c</fullName>
    <label>Parcel</label>
    <referenceTo>DM_Parcel1__c</referenceTo>
    <relationshipLabel>Fields</relationshipLabel>
    <relationshipName>Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>