force-app/main/default/objects/DM_Field__c/fields/DM_Shared_Boundary_With__c.field-meta.xml
<CustomField>
    <fullName>DM_Shared_Boundary_With__c</fullName>
    <inlineHelpText>Who or what owns the neighboring land</inlineHelpText>
    <label>Shared Boundary With</label>
    <length>80</length>
    <type>Text</type>
</CustomField>