force-app/main/default/objects/DM_Field__c/fields/DM_Soil_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Soil_Type__c</fullName>
    <label>Soil Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sandy</fullName>
            </value>
            <value>
                <fullName>Clay</fullName>
            </value>
            <value>
                <fullName>Loamy</fullName>
            </value>
            <value>
                <fullName>Silty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>