force-app/main/default/objects/DM_Field__c/fields/DM_Visual_Barrier_Present__c.field-meta.xml
<CustomField>
    <fullName>DM_Visual_Barrier_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Fence, hedge, sign, or natural barrier</inlineHelpText>
    <label>Visual Barrier Present</label>
    <type>Checkbox</type>
</CustomField>