force-app/main/default/objects/DM_Field__c/fields/DM_Water_Source__c.field-meta.xml
<CustomField>
    <fullName>DM_Water_Source__c</fullName>
    <label>Water Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Well</fullName>
            </value>
            <value>
                <fullName>River</fullName>
            </value>
            <value>
                <fullName>Municipal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>