force-app/main/default/objects/DM_Field__c/recordTypes/DM_Buffer_Zone.recordType-meta.xml
<RecordType>
    <fullName>DM_Buffer_Zone</fullName>
    <active>true</active>
    <description>A specific area of a Parcel set aside to protect Production fields.</description>
    <label>Buffer Zone</label>
</RecordType>