force-app/main/default/objects/DM_Field__c/recordTypes/DM_Field.recordType-meta.xml
<RecordType>
    <fullName>DM_Field</fullName>
    <active>true</active>
    <description>A managed area of a Parcel for Production planting and inputs.</description>
    <label>Production Field</label>
</RecordType>