force-app/main/default/objects/DM_Field__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DM_Field_Number__c</columns>
    <columns>DM_Land_Use__c</columns>
    <columns>DM_Certification_Expiration_Date__c</columns>
    <columns>DM_Parcel__c</columns>
    <columns>DM_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>