force-app/main/default/objects/DM_Field__c/listViews/Buffer_Zones.listView-meta.xml
<ListView>
    <fullName>Buffer_Zones</fullName>
    <columns>NAME</columns>
    <columns>DM_Field_Number__c</columns>
    <columns>DM_Certification_Expiration_Date__c</columns>
    <columns>DM_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>DM_Field__c.DM_Buffer_Zone</value>
    </filters>
    <label>Buffer Zones</label>
</ListView>