force-app/main/default/objects/DM_Field__c/listViews/Production_Fields.listView-meta.xml
<ListView>
    <fullName>Production_Fields</fullName>
    <columns>NAME</columns>
    <columns>DM_Field_Number__c</columns>
    <columns>DM_Certification_Expiration_Date__c</columns>
    <columns>DM_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>DM_Field__c.DM_Field</value>
    </filters>
    <label>Production Fields</label>
</ListView>